*** 20001023_1 by lusky
sync'd key charset per discussion with comstud


*** 20001021_1 by lusky
fix for duplicate 401's for kick #validchan invalnick
ServerStats->is_ref is incremented twice on an X-line
  which is set to 1 (jdc)
STATS P notifications were not sent to opers (jdc)
includefile rehash notifications sent to FLAGS_DEBUG
stats l/L target to FLAGS_SPY (if STATS_NOTICE) (jdc)
uname info only displayed to opers
If X-line port field is 2, reject client but do not send
  a notification to opers
STATS y/Y now oper-only
Four new defines, I_LINES_OPER_ONLY, K_LINES_OPER_ONLY,
  P_LINES_OPER_ONLY, and SPOOF_NOTICE (jdc/jrl)
add some missing defines to m_info.h


*** 20001019_1 by lusky
dns cache entries were never fully expiring, stayed in the hashtable forever


*** 20001018_1 by lusky
fix for whois_notice (tv)


*** 20001017_1 by lusky
fixed a bug tickled by sending a bogus SERVER command from hacked server
auditted leakage of IP address from get_client_name calls


*** 20001011_1 by lusky
fix for *@*.foo.com I:lines being broken by a user@host.foo.com I:lines


*** 20001005_3 by lusky
added CVS Id tags to numerous files
brought Hybrid-team and version.c.SH
deleted ChangeLog.old and include/defs.h


*** 20001005_2 by bill

Added myself to Hybrid development team


*** 20001005_1 by bill

Fixed misnamed va var in sendto_realops()


*** 20001004_1 by lusky
changed ltrace to be consistant with trace for non-opers
mode channel +e now returns an error to non-chanops
unauth connection notices now include servername/port (jdc)


*** 20000917_1 by lusky
changed "juping locally" to "locally juping" (gp)
typo in stats z display (gp)


*** 20000914_1 by lusky
typo in channel jupe oper notice (db)
changed 461 error to show * for empty field (tv)
new config.h option ALLOW_DOT_IN_IDENT


*** 20000910_1 by lusky
backed out bill's patch for now


*** 20000907_2 by bill

Oops.  Forgot to remove canonize() and place function call in the #ifdef.


*** 20000907_1 by bill
