@@ -1,3 +1,7 @@
+*** 20001024_1 by lusky
+fixed new x_LINES_OPER_ONLY defines (jdc)
+
+
 *** 20001023_1 by lusky
 sync'd key charset per discussion with comstud
 
